$Id: ChangeLog,v 1.52 2003/11/03 10:08:01 uehira Exp $

2003-11-03 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* insert_trg : bug fix
	* winadd : add memory mode.
	           first, try to read all files and write into memory.
	* Version 1.1.25 released.

2003-10-29 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* dewin.c,wch.c,wchch.c,wed.c : exit()->exit(0)
	* Version 1.1.24 released.

2003-10-26 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* relay.c : added options -r, -g, -d and -s
	* man/relay.1 : updated
	* man/recvnmx.1 : updated
	* man/clean_nmx.1 : created
	* Version 1.1.23 released.

2003-08-09 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* wchasn.c : channel number assignment filter.
	* Version 1.1.22 released.

2003-07-30 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* win.c : Ignore clicks on horizontal borders in ZOOM window.

2003-07-25 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* shmdump.c : -x (hexadecimal dump) and -f (file output)

2003-07-24 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* wadd2.c : "mv" -> "cp;rm" for cygwin
	* win.c : SUN sound file output ("PUT")

2003-07-02 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* ecore2.c : introduced strerror() after patch by Nakagawa.
	* src/Makefile.in : added @LIBSHMGET@ to ecore2_LDADD
	* Version 1.1.21 released.

2003-06-23 Tsuruoka Hiroshi <tsuru@eri.u-tokyo.ac.jp>
	* Version 1.1.20 released.

2003-06-23 Tsuruoka Hiroshi <tsuru@eri.u-tokyo.ac.jp>
        * wintosac.c : win text format to sac/sac2000 format

2003-06-22 Tsuruoka Hiroshi <tsuru@eri.u-tokyo.ac.jp>
        * wintowin.c : win text format to win format

2003-06-10 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* ecore2.c : deleted '#include <errno.h>' and recovored ext defs.
	* Version 1.1.19 released.

2003-06-09 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* hypomh.f, hypomhc.c : bug fixed by Honda/Nagai for initialization of IYEAR 
	* Version 1.1.18 released.

2003-06-03 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* ecore2.c : replaced err-related ext defs with '#include <errno.h>'
